# rust-web-app

./: .gitignore  Cargo.toml  README.md  compose.yml  rust.dockerfile
src/: main.rs
src/controller/: handle_delete_request.rs  handle_get_request.rs  handle_post_request.rs  handle_put_request.rs  mod.rs
src/db/: mod.rs
src/domain/: mod.rs  user.rs  user_dto.rs
src/persistence/: user_repository.rs
src/router/: mod.rs
src/service/: mod.rs  user_service.rs
src/test/: mod.rs
