[package]
name = "webTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
